# limitrs

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  routes.rs  startup.rs  state.rs
backend/src/routes/: count.rs
backend/tests/api/: count.rs  health_check.rs  main.rs  test_server.rs
client/: Cargo.toml
client/src/: client.rs  lib.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
frontend/src/components/: counter.rs
