[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client = { path = "../client", version = "0.1.0" }

axum = { versin = "0.6.0", features = ["ws"] }
axum-extra = { version = "0.4.0", features = ["spa"] }
clap = { version = "4.0.26", features = ["derive"] }
log = "0.4.17"
serde = "1.0.147"
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
