[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client = { path = "../client", version = "0.1.0" }

console_error_panic_hook = "0.1.7"
gloo-console = "0.2.3"
gloo-net = "0.2.4"
reqwest = { version = "0.11", features = ["blocking"] }
js-sys = "0.3"
serde = "1.0.147"
serde_json = "1.0.89"
log = "0.4.17"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
yew = "0.19.3"
yew-router = "0.16.0"
